# cl_project

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
applications/: bundle_apps.sh
applications/app_01/: requirements.txt
applications/circle_app/: default.json  info.json  requirements.txt
applications/circle_app/src/: app.py
src/cl/: __init__.py
src/cl_project/: __init__.py
src/common_cl_code/: __init__.py  baseline.py  datasets.py  plotting.py  stimulus_generation.py
tests/: test_cl.py
workspace/: example.py  record_baseline_fr.ipynb
workspace/day_notebooks/: 26-04-09.ipynb  26-04-13.ipynb  26-04-15.ipynb  26-04-22.ipynb  26-04-27.ipynb  26-05-03.ipynb
