[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common_cl_code"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
readme = "README.md"
#license = { text = "MIT" } #TODO: add license

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "jax",
    # "cl-sdk>=0.29",
    "dandi",
    "fsspec",
    "pynwb",
    "h5py",
    "hatchling",
]

[project.optional-dependencies]
dev = ["pytest", "nbstripout"]

[tool.hatch.build.targets.wheel]
packages = ["src/common_cl_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
